--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" width=960 height=600 style="width: 960px; height: 600px; background: #231F20"></canvas>
-    <script src="Build/Build.loader.js"></script>
+    <script src="Build/Inventory-Game.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/Build.data.gz",
-        frameworkUrl: "Build/Build.framework.js.gz",
-        codeUrl: "Build/Build.wasm.gz",
+        dataUrl: "Build/Inventory-Game.data.gz",
+        frameworkUrl: "Build/Inventory-Game.framework.js.gz",
+        codeUrl: "Build/Inventory-Game.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Hidde-Loman",
         productName: "Inventory Game",
