--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Inventory-Game.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Inventory-Game.data.gz",
-        frameworkUrl: buildUrl + "/Inventory-Game.framework.js.gz",
-        codeUrl: buildUrl + "/Inventory-Game.wasm.gz",
+        dataUrl: buildUrl + "/Inventory-Game.data",
+        frameworkUrl: buildUrl + "/Inventory-Game.framework.js",
+        codeUrl: buildUrl + "/Inventory-Game.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Hidde-Loman",
         productName: "Inventory Game",
