--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Inventory Game</title>
+    <title>Hidde Loman | Inventory System</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -103,5 +103,11 @@
       };
       document.body.appendChild(script);
     </script>
+
+    <div class="description">
+      <h1>Inventory system</h1>
+      <p>This inventory system was a programming assignment we had to do in our first year in school. Back then I made a scuffed version with crappy coding and designing. I decided to remake this with slightly less scuffed code. I made the system in a way that others could use it. It's easy to change the UI designs and to change the amount of slots needed in the inventory. I made this in 1,5 hours.</p>
+    </div>
+
   </body>
 </html>
