--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
       document.body.appendChild(script);
     </script>
 
-    <div style="text-align: center; padding-top: 50%;">
+    <div style="text-align: center; padding-top: 40%;">
       <h1>Inventory system</h1>
-      <p>This inventory system was a programming assignment we had to do in our first year in school. Back then I made a scuffed version with crappy coding and designing. I decided to remake this with slightly less scuffed code. I made the system in a way that others could use it. It's easy to change the UI designs and to change the amount of slots needed in the inventory. I made this in 1,5 hours.</p>
+      <p style="padding-left: 25%; padding-right: 25%;">This inventory system was a programming assignment we had to do in our first year in school. Back then I made a scuffed version with crappy coding and designing. I decided to remake this with slightly less scuffed code. I made the system in a way that others could use it. It's easy to change the UI designs and to change the amount of slots needed in the inventory. I made this in 1,5 hours.</p>
     </div>
 
   </body>
