--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </script>
 
     <div style="text-align: center; padding-top: 45%; font-family: Arial;">
-      <h1>Top down shooter</h1>
+      <h1>Inventory system</h1>
       <p style="padding-left: 25%; padding-right: 25%;">This inventory system was a programming assignment we had to do in our first year in school. Back then I made a scuffed version with crappy coding and designing. I decided to remake this with slightly less scuffed code. I made the system in a way that others could use it. It's easy to change the UI designs and to change the amount of slots needed in the inventory. I made this in 1,5 hours.</p><br>
       <a style="color: white; background-color: skyblue; border-radius: .2es; padding: 12px 12px 12px 12px; text-decoration: none;" href="https://github.com/Atom-Boiii/atom-inventory-system">Check the source code</a>
     </div>
